--- a/.github/workflows/codeball.yml
+++ b/.github/workflows/codeball.yml
@@ -9,8 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Codeball
     steps:
-      - name: Codeball
-        uses: sturdy-dev/codeball-action@v2
+      - name: Codeball AI Code Review
+        uses: sturdy-dev/codeball-action@v2.6.0
         with:
           # For all configuration options see https://github.com/sturdy-dev/codeball-action/blob/v2/action.yml
           approvePullRequests: "true"
