--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.21.0",
     "@babel/preset-react": "^7.18.6",
     "@heroicons/react": "^2.0.17",
     "@hotwired/stimulus": "^3.2.1",
@@ -16,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react_ujs": "^2.6.2",
     "tailwindcss": "^3.3.1",
     "trix": "^2.0.4",
